# workforce-intelligence-platform-ingestion

./: .gitignore  Makefile  README.md  TASKS.md  pyproject.toml
.github/workflows/: ingestion-ci.yml
airflow/dags/: hr_ingestion_dag.py
airflow/plugins/: hr_ingestion_plugin.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: dim_employees.sql  fct_attrition_monthly.sql  fct_headcount_daily.sql  schema.yml
dbt/models/reports/: rpt_recruiting_funnel.sql  schema.yml
dbt/models/staging/: schema.yml  stg_employees.sql  stg_job_applications.sql
dbt/tests/: assert_headcount_positive.sql  assert_no_null_employee_id.sql
docker/: init.sql  mock_workday_server.py
docker/trino/catalog/: postgresql.properties
src/: __init__.py
src/connectors/: __init__.py  airtable.py  base.py  greenhouse.py  workday.py
src/models/: __init__.py  employee.py
src/utils/: alerts.py  db.py  schema_drift.py  synthetic_data.py
tests/: conftest.py
tests/integration/: test_postgres_ingestion.py  test_trino_queries.py
tests/unit/: test_airtable_connector.py  test_alerts.py  test_db.py  test_greenhouse_connector.py  test_schema_drift.py  test_synthetic_data.py  test_workday_connector.py
