[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[project]
name = "wip-ingestion"
version = "0.1.0"
description = "HR data ingestion pipeline — workforce-intelligence-platform module 1"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pyairtable>=2.3",
    "faker>=25.0",
    "python-dotenv>=1.0",
    "dbt-core>=1.8",
    "dbt-postgres>=1.8",
    "tenacity>=8.3",
    "apache-airflow>=2.9.1",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "testcontainers[postgres]>=4.5",
    "ruff>=0.4",
    "sqlfluff>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running Docker infrastructure",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "docker/*"]

[tool.sqlfluff.core]
dialect = "postgres"
templater = "dbt"
sql_file_exts = ".sql"
